# dlsite-asmr-player

./: .gitignore  .gitmodules  Makefile.toml  README.md  package.json  pnpm-lock.yaml
client/: .eslintrc.cjs  .gitignore  index.html  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
client/app/: page.tsx
client/bindings/: bindings.ts
client/src/: App.tsx  Root.tsx  const.ts  main.tsx  router.ts  service-worker.js  state.ts
client/src/app/: App.tsx  Navbar.tsx  Root.tsx  Sidebar.tsx  index.tsx
client/src/bindings/: bindings.ts
client/src/components/: AgeBadge.tsx  ItemCard.tsx  Link.tsx  RemoteItemCard.tsx  Skeleton.tsx
client/src/components/ui/: Skeleton.tsx
client/src/login/: Login.tsx
client/src/pages/: _state.ts  login.tsx
client/src/pages/(protected)/: _layout.tsx  _state.ts  scan.tsx  settings.tsx
client/src/pages/(protected)/(home)/: index.tsx
client/src/pages/(protected)/(home)/_components/: LocalSearch.tsx  RemoteSearch.tsx
client/src/pages/(protected)/_components/: Header.tsx  Navbar.tsx  Player.tsx  Protected.tsx
client/src/pages/(protected)/product/[productId]/: index.tsx
client/src/routes/: page.tsx  route.tsx
client/src/routes/app/: layout.tsx  page.tsx  route.tsx  state.tsx  utils.ts
client/src/routes/app/(home)/: LocalSearch.tsx  RemoteSearch.tsx  page.tsx
client/src/routes/app/[productId]/: page.tsx
client/src/routes/app/[productId]/_components/: AgeBadge.tsx
client/src/routes/app/[productId]/components/: AgeBadge.tsx
client/src/routes/app/_components/: Header.tsx  Navbar.tsx  Player.tsx  Protected.tsx
client/src/routes/app/_root/: page.tsx
client/src/routes/app/components/: Header.tsx  Navbar.tsx  Player.tsx  Protected.tsx  Sidebar.tsx
client/src/routes/app/scan/: page.tsx
client/src/routes/app/search/: page.tsx
client/src/routes/app/settings/: page.tsx
client/src/routes/login/: page.tsx  route.tsx
client/src/utils/: useStreamUrl.tsx
server/: .env  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  docker-compose.yml  insert_product.sql  schema.hcl
server/dlsite/: Cargo.toml  README.md
server/dlsite/src/: circle.rs  creator.rs  genre.rs  interface.rs  lib.rs  product.rs  product_api.rs  search.rs  utils.rs
server/dlsite/src/circle/: options.rs
server/dlsite/src/product/: ajax.rs  common.rs  html.rs  review.rs  tests.rs
server/dlsite/src/search/: options.rs
server/entity/: Cargo.toml
server/entity/src/: lib.rs
server/entity/src/entities/: circle.rs  genre.rs  mod.rs  prelude.rs  product.rs  product_genre.rs  product_user_genre.rs  sea_orm_active_enums.rs  user.rs
server/entity/src/linked/: mod.rs  product_genre.rs  product_user_genre.rs
server/migration/: Cargo.toml
server/migration/src/: m20220101_000001_create_table.rs
server/migrations/: V1__init.sql
server/migrations/2023-08-30-104622_init/: down.sql  up.sql
server/prisma/: schema.prisma
server/prisma-cli/: Cargo.toml
server/prisma/migrations/20230523113448_init/: migration.sql
server/prisma/migrations/20230523140549_init/: migration.sql
server/prisma/migrations/20230831164836_init/: migration.sql
server/prisma/migrations/20230902094609_init/: migration.sql
server/queries/: circle.sql  genre.sql  insert_product.sql  product.sql  scan.sql  user.sql
server/src/: browse.rs  config.rs  cornucopia.rs  interface.rs  main.rs  middleware.rs  pool.rs  router.rs  scan.rs  search.rs  stream.rs
server/src/axum_router/: frontend.rs  middleware.rs  mod.rs  stream.rs
server/src/db/: config.rs  mod.rs  product.rs  product_read.rs
server/src/db/product/: mod.rs  modify.rs  read.rs  read_browse.rs
server/src/remote/: product.rs
server/src/router/: circle.rs  common.rs  config.rs  product.rs  scan.rs  utils.rs
server/src/rspc_router/: common.rs  config.rs  mod.rs  product.rs  remote.rs  scan.rs  utils.rs
