[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.18"
rspc = { version = "0.1.3", features = ["axum"] }
tokio = "1.28.1"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
  "rspc",
  "migrations",
] }
tower-http = { version = "0.4.0", features = ["fs"] }
serde = "1.0.163"
tower-cookies = "0.9.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
toml = "0.7.4"
dirs = "5.0.1"
once_cell = "1.17.1"
anyhow = "1.0.71"
rand = "0.8.5"
walkdir = "2.3.3"
dlsite = { path = "./dlsite" }
regex = "1.8.2"
futures = "0.3.28"
chrono = "0.4.24"

[workspace]
resolver = "2"
members = [".", "prisma-cli", "dlsite"]
