[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.18"
rspc = { version = "0.1.3", features = ["axum"] }
tokio = "1.28.1"
tower-http = { version = "0.4.0", features = ["fs"] }
serde = "1.0.163"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
toml = "0.7.4"
dirs = "5.0.1"
once_cell = "1.17.1"
anyhow = "1.0.71"
walkdir = "2.3.3"
dlsite = { path = "./dlsite" }
regex = "1.8.2"
futures = "0.3.28"
chrono = "0.4.24"
load-dotenv = "0.1.2"
cornucopia_async = { version = "0.4.0", features = ["deadpool"] }
tokio-postgres = { version = "0.7.8", features = ["with-time-0_3"] }
deadpool-postgres = "0.10.5"
postgres-types = "0.2.5"
time = "0.3.21"

[workspace]
resolver = "2"
members = [".", "dlsite"]
