[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.6.18", features = ["headers", "query"] }
rspc = { version = "0.1.3", features = ["axum"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.4.0", features = ["fs"] }
serde = "1.0.163"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
toml = "0.7.4"
dirs = "5.0.1"
once_cell = "1.17.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
walkdir = "2.3.3"
regex = "1.8.2"
futures = "0.3.28"
chrono = "0.4.24"
postgres-types = "0.2.5"
struct-convert = "1.2.7"
sanitize-filename = "0.5.0"
tower = "0.4.13"
urlencoding = "2.1.2"
rust-embed = "8"
mime_guess = "2.0.4"
dlsite = { path = "./dlsite-rs" }

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.10"
default-features = false
features = ["postgresql", "migrations", "rspc"]

[workspace]
resolver = "2"
members = ["prisma-cli", "dlsite-rs"]
