[package]
name = "dlsite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
reqwest = "0.11.17"
scraper = "0.16.0"
serde = "1.0.163"
serde-aux = "4.2.0"
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.3.1"
tokio = "1"
async-backtrace = "0.2.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace", "std"] }
