[package]
name = "dlsite"
version = "0.1.1"
edition = "2021"
description = "DLsite client"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
reqwest = { version = "0.11.17", features = [
  "rustls-tls",
], default-features = false }
scraper = "0.17"
serde = "1.0.163"
serde-aux = "4.2.0"
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.3.1"
tokio = { version = "1", features = ["macros"] }
regex = "1.8.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace", "std"] }
