[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros"] }
entity = { path = "../entity" }

[dependencies.sea-orm-migration]
version = "0.12.0-rc.2"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
